styles.css
* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

body {
	font-family: Verdana, Geneva, Tahoma, sans-serif;
}

header {
	width: 100%;
	height: 50px;
	background-color: #0e3b43;
	display: flex;
	align-items: center;
	justify-content: center;
	position: fixed;
}

h1 {
	font-size: 2rem;
}

h1 > a {
	text-decoration: none;
	color: white;
}

main {
	padding: 50px;
	display: flex;
	flex-direction: column;
	background-color: #a3bbad;
}

button {
	padding: 10px;
	font-size: 1rem;
	border-radius: 30px;
	background-color: #a3bbad;
	border: 3px solid #312509;
	font-weight: bold;
	width: 150px;
	margin: 15px auto 15px auto;
	color: #312509;
}

button:hover {
	background-color: #0e3b43;
	color: white;
}

button:active {
	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.255);
}

.answer {
	margin: 15px auto 15px auto;
	display: none;
}

.questioncard {
	width: 100%;
	border: 3px solid black;
	border-radius: 20px;
	margin: 20px;
	padding: 50px;
	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.331);
	display: flex;
	flex-direction: column;
	background-color: #357266;
	position: relative;
}

.bookmark {
	position: absolute;
	top: -10px;
	right: -10px;
	filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.2));
}

.question {
	text-align: center;
	margin-bottom: 15px;
	font-size: 1.4rem;
	color: white;
}

.description {
	font-size: 0.9rem;
}
.taglist {
	padding-top: 10px;
	list-style: none;
	display: flex;
	gap: 5px;
	flex-wrap: wrap;
}

.tag {
	background-color: #312509;
	border-radius: 5px;
	padding: 5px;
	color: rgb(255, 255, 255);
	font-size: 0.8rem;
}

.tag:hover {
	color: rgb(211, 211, 211);
}

